fixed modal-box issue when height is squished

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -267,6 +267,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   color: white;
   position: fixed;
   opacity: .9;
@@ -274,7 +275,6 @@ body {
   left: 0%;
   width: 100%;
   height: 100%;
-  margin: 125px 0 0 0;
   background-color: #1f1f1f !important;
   text-align: center;
   z-index: 10;
@@ -282,7 +282,7 @@ body {
 }
 
 .modal-box h4 {
-  margin-top: 120px;
+  margin-top: 10px;
   margin-bottom: 0px;
   font-size: 25px;
   font-weight: 500;
